--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,9 @@ body {
   width: 400;
 }
 
-h1{
-  margin-left: auto;
-  margin-right: auto;
+header{
+  text-align: center;
 }
+ h1{
+   text-align: center;
+ }
