--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
-
+p{
+  padding: 0;
+  margin: 0;
+}
 body {
   color:whitesmoke;
   font-family:Verdana;
@@ -38,7 +41,8 @@ header{
  .運営{
   border: 1px solid white;
   margin:  auto;
-  height: 60px;
+  height: auto;
+  width: auto;
   padding: 5px;
   color:white;
 }
@@ -46,18 +50,19 @@ header{
 .挨拶{
   border: 1px solid white;
   margin:  auto;
-  height: 60px;
+  height: auto;
+  height: auto;
   padding: 5px;
   color:white;
 }
 .会社概要{
   border: 1px solid white;
   margin:  auto;
-  height: 60px;
+  height: auto;
+  height:auto;
   padding: 5px;
   color:white;
 }
-
 .one{
   border: 1px solid white;
   margin: auto;
