--- a/css/styles.css
+++ b/css/styles.css
@@ -59,9 +59,10 @@ header{
 }
 
 .one{
+  text-align: center;
   border: 1px solid white;
   margin: auto;
-  height: 260px;
+  height: 270px;
   padding: 5px;
   color:white;
 }
@@ -69,7 +70,7 @@ header{
 .two{
   border: 1px solid white;
   margin: auto;
-  height: 260px;
+  height: 270px;
   padding: 5px;
   color:white;
 }
@@ -77,7 +78,7 @@ header{
 .three{
   border: 1px solid white;
   margin:  auto;
-  height: 260px;
+  height: 270px;
   padding: 10px;
   color:white;
 }
@@ -85,8 +86,10 @@ header{
 .four{
   border: 1px solid white;
   margin:  auto;
-  height: 260px;
+  height: 270px;
   padding: 10px;
   color:white;
 }
+
+
 
