--- a/css/styles.css
+++ b/css/styles.css
@@ -1,44 +1,39 @@
-   body {
-    color:whitesmoke;
-    font-family:Verdana;
-    background-color: black;
-  }
+body {
+  color:whitesmoke;
+  font-family:Verdana;
+  background-color: black;
+}
 
-  .home {
-     background-color:black;
-    width: 400;
-  }
-  
-  h1{
-    margin-left: auto;
-    margin-right: auto;
-  }
+.home {
+   background-color:black;
+  width: 400;
+}
 
-  .table-simple .table-simple-row {
-    border-top: 1px solid #eee;
-  }
+h1{
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  .table-simple{
-   width: 100%;
-  }
+.table-simple{
+ width: 100%;
+}
 
-  table{
-    display: table;
-    border-collapse: separate;
-    border-spacing: 10%;
-  }
+table{
+  display: table;
+  border-collapse: separate;
+  border-spacing: 10%;
+}
 
-  td{
-    margin: 0px;
-    padding: 5px;
-    border: 10px;
-    font-size: 85%;
-    vertical-align: baseline;
-  }
+.table-row{
+  margin: 10px;
+  padding: 10px;
+  border: 10px;
+  font-size: 85%;
+  vertical-align: baseline;
+}
 
-  li{
-  .table-column-project{
-    margin: 0px;
-    padding: 5px;
-    border: 10px;
-  }
+.table-column-project{
+  margin: 0px;
+  padding: 5px;
+  border: 10px;
+}
