--- a/css/styles.css
+++ b/css/styles.css
@@ -148,3 +148,23 @@ table{
   padding: 5px;
   border: 10px;
 }
+
+.memberone{
+  display: flex;
+  align-items: stretch;
+}
+
+.membertwo{
+  display: flex;
+  align-items: stretch;
+}
+
+.memberthree{
+  display: flex;
+  align-items: stretch;
+}
+
+.memberfour{
+  display: flex;
+  align-items: stretch;
+}
