--- a/css/styles.css
+++ b/css/styles.css
@@ -3,71 +3,95 @@ p{
   margin: 0;
 }
 
+.title{
+  font-size: 500%;
+  margin-bottom: 0;
+}
+
+.L-Boap{
+  font-size: 200%;
+  margin: 20px;
+}
+
+.description{
+  margin: 100px;
+  font-style: oblique;
+}
 
 .home {
-   background-color:black;
+  background-color:black;
+  border: 2px solid white;
   width: 400;
 }
 
-header{
+.header{
   text-align: center;
+  padding: 70px;
+  border:10px white;
+  margin: 50px;
 }
- h1{
-   text-align: center;
- }
 
-.sentence{
- border: 1px solid white;
- margin:  auto;
- height: 450px;
- padding: 10px;
- color:white;
- }
+h1{
+ text-align: center;
+ margin:50px auto 50px auto;
+}
+
+h3{
+ text-align: center;
+}
 
  .Message{
   display: flex;
   align-items: stretch;
  }
 
- .Header{
-   display: flex;
-   align-items: stretch;
-   
+ .header2{
+  display: flex;
+  align-items: stretch;
+  margin-top: 100px;
  }
  
- .運営{
-  border: 1px solid white;
+ .messageLink{
+  border: 5px solid white;
   margin:  auto;
   height: auto;
   width: auto;
-  padding: 5px;
+  padding: 20px 100px 20px 100px;
   color:white;
 }
 
-.挨拶{
-  border: 1px solid white;
+.profileLink{
+  border: 5px solid white;
   margin:  auto;
   height: auto;
   height: auto;
-  padding: 5px;
+  padding: 20px 100px 20px 100px;
   color:white;
 }
 
-.会社概要{
-  border: 1px solid white;
+.memberLink{
+  border: 5px solid white;
   margin:  auto;
   height: auto;
   height:auto;
-  padding: 5px;
+  padding: 20px 100px 20px 100px;
   color:white;
 }
+
+.sentence{
+ border: 10px solid white;
+ margin:  auto;
+ height: 450px;
+ padding: 10px;
+ color:white;
+ }
 
 .one{
   text-align: center;
   border: 1px solid white;
   margin: auto;
   height: 270px;
-  padding: 5px;
+  padding: 20px 50px 20px 50px;
   color:white;
 }
 
@@ -113,56 +137,55 @@ body {
   border: 1px solid;
 }
 
-.写真＆挨拶{
-  display: flex;
-  padding: 3px;
-  align-items: stretch;
-}
-
-h1{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-h1{
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .table-simple{
  width: 100%;
+ table-layout: fixed;
+ margin: auto;
 }
 
-table{
-  display: table;
-  border-collapse: separate;
-  border-spacing: 10%;
-}
-
-.table-row{
-  margin: 10px;
+.table-column {
+  background-color: rgb(128, 120, 105);
   padding: 10px;
-  border: 10px;
-  font-size: 90%;
-  vertical-align: baseline;
+  border: 2px solid white;
 }
 
-.table-column .table-column-project{
-  margin: 10%;
-  padding: 5%;
-  border: 10%;
+.table-description{
+  padding: 10px;
+  border: 2px solid white;
+  text-align: center
+}
+
+.table-column-project {
+ text-align: center;
+ border: 2px solid white;
+}
+
+
+
+.ul-simple{
+  margin: 50px;
+}
+
+.ulojisan{
+  margin: 20px;
+}
+
+.ul-column{
+  margin: 20px;
+  font-size: 90%;
+}
+
+.space{
+  margin: 200px;
 }
 
 .CEO{
-  font-stretch: ultra-condensed;
-  margin: 0px;
-  padding: 10px;
-  border: 10px;
+  font-style: oblique;
+  margin: 0 0 30px 15px;
+  font-size: 13px;
+  text-align: center;
 }
-<<<<<<< HEAD
 
-=======
-.感覚{
-  padding: 70px;
+.profile{
+  margin: 50px;
 }
->>>>>>> cc9ff52fc94a6c1b64856256554623c9d94f524f
