--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,24 @@
-p{
-  padding: 0;
-  margin: 0;
+body{
+  display: table;
+  color:whitesmoke;
+  font-family:Verdana;
+  background-color: black;
+  margin: 50px;
 }
 
+h1{
+ text-align: center;
+ margin:50px auto 50px auto;
+}
+
+h3{
+ text-align: center;
+}
+
+.home {
+  background-color:black;
+  width: 400;
+}
 .title{
   font-size: 500%;
   margin-bottom: 0;
@@ -18,12 +34,6 @@ p{
   font-style: oblique;
 }
 
-.home {
-  background-color:black;
-  border: 2px solid white;
-  width: 400;
-}
-
 .header{
   text-align: center;
   padding: 70px;
@@ -31,110 +41,81 @@ p{
   margin: 50px;
 }
 
-h1{
- text-align: center;
- margin:50px auto 50px auto;
+.home {
+  background-color:black;
+  border: 2px solid white;
+  width: 400;
 }
 
-h3{
- text-align: center;
-}
-
- .Message{
+.Message{
   display: flex;
-  align-items: stretch;
- }
+  align-items: last baseline;
+}
 
- .header2{
+.home2{
   display: flex;
   align-items: stretch;
   margin-top: 100px;
- }
+}
  
- .messageLink{
+.messageLink{
+  font-size:20px ;
   border: 5px solid white;
   margin:  auto;
   height: auto;
   width: auto;
-  padding: 20px 100px 20px 100px;
+  padding: 10px 80px 10px 80px;
   color:white;
 }
 
 .profileLink{
+  font-size:20px ;
   border: 5px solid white;
   margin:  auto;
   height: auto;
-  height: auto;
-  padding: 20px 100px 20px 100px;
+  width: auto;
+  padding: 10px 80px 10px 80px;
   color:white;
 }
 
+.kotei{
+  display: table;
+}
+
 .memberLink{
+  font-size:20px ;
   border: 5px solid white;
   margin:  auto;
   height: auto;
-  height:auto;
-  padding: 20px 100px 20px 100px;
+  width: auto;
+  padding: 10px 80px 10px 80px;
   color:white;
+}
+
+.message{
+  margin-top: 300px;
+}
+
+.messageDetails{
+  display: flex;
 }
 
 .sentence{
  border: 10px solid white;
- margin:  auto;
- height: 450px;
  padding: 10px;
  color:white;
- }
-
-.one{
-  text-align: center;
-  border: 1px solid white;
-  margin: auto;
-  height: 270px;
-  padding: 20px 50px 20px 50px;
-  color:white;
 }
 
-.two{
-  border: 1px solid white;
-  margin: auto;
-  height: 270px;
-  padding: 5px;
-  color:white;
+.yukari{
+  font-size: 75%;
 }
 
-.three{
-  border: 1px solid white;
-  margin:  auto;
-  height: 270px;
-  padding: 10px;
-  color:white;
+.profile{
+  margin-top: 300px;
 }
 
-.four{
-  border: 1px solid white;
-  margin:  auto;
-  height: 270px;
-  padding: 10px;
-  color:white;
-}
-
-
-
-body {
-  color:whitesmoke;
-  font-family:Verdana;
-  background-color: black;
-}
-
-
-.home {
-  background-color:black;
-  width: 400;
-}
-  
-.メッセ{
-  border: 1px solid;
+.profileDetails{
+  margin-top: 100px;
 }
 
 .table-simple{
@@ -160,7 +141,9 @@ body {
  border: 2px solid white;
 }
 
-
+.history{
+  margin-top: 300px;
+}
 
 .ul-simple{
   margin: 50px;
@@ -175,10 +158,6 @@ body {
   font-size: 90%;
 }
 
-.space{
-  margin: 200px;
-}
-
 .CEO{
   font-style: oblique;
   margin: 0 0 30px 15px;
@@ -186,6 +165,6 @@ body {
   text-align: center;
 }
 
-.profile{
-  margin: 50px;
+.memeber{
+  margin-top: 300px;
 }
